force-app/main/default/objects/Application__c/fields/Batch_Specialisation__c.field-meta.xml
<CustomField>
    <fullName>Batch_Specialisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch Specialisation</label>
    <referenceTo>Specialisation__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>